<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aLogcat ROOT</string>
    <string name="app_name_paused">Paused</string>
    <string name="app_prefs">aLogcat - Preferences</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="fatal_title">Fatal</string>
    <string name="error_title">Error</string>
    <string name="warn_title">Warning</string>
    <string name="info_title">Information</string>
    <string name="verbose_title">Verbose</string>
    <string name="debug_title">Debug</string>
    <string name="filter_menu">Filter (%s)</string>
    <string name="search_menu">Search (%s)</string>
    <string name="filter_dialog_title">Log Filter</string>
    <string name="search_dialog_title">Log Search</string>
    <string name="filter_menu_empty">Filter</string>
    <string name="search_menu_empty">Search</string>
    <string name="filter_dialog_text">A log filter can be a simple substring or a Java-conforming regular expression.</string>
    <string name="pattern_error_text">Invalid regular expression</string>
    <string name="clear">Clear</string>
    <string name="brief_title">Brief</string>
    <string name="process_title">Process</string>
    <string name="tag_title">Tag</string>
    <string name="thread_title">Thread</string>
    <string name="raw_title">Raw</string>
    <string name="time_title">Time</string>
    <string name="long_title">Long</string>
    <string name="reading_logs">Reading logs, please wait.</string>
    <string name="share_menu">Share</string>
    <string name="play_menu">Play</string>
    <string name="pause_menu">Pause</string>
    <string name="jump_start_menu">Top</string>
    <string name="jump_end_menu">Bottom</string>
    <string name="main_title">Main</string>
    <string name="events_title">Events</string>
    <string name="radio_title">Radio</string>
    <string name="allbuffers_title">All</string>
    <string name="small_title">Small</string>
    <string name="medium_title">Medium</string>
    <string name="large_title">Large</string>
    <string name="clear_menu">Clear</string>
    <string name="save_menu">Save</string>
    <string name="prefs_menu">Preferences</string>
    <string name="saving_log">Saving log to: %s, please wait</string>
    <string name="threadtime_title">Thread Time</string>
    <string name="black_title">Black</string>
    <string name="white_title">White</string>
    <string name="gray_title">Gray</string>
    <string name="apply_as_regexp">Apply as regular expression?</string>
    <string name="checking_root">Checking Root\nPlease Wait</string>
    <string name="log_display">Log Display</string>
    <string name="level">Level</string>
    <string name="level_summary">Log level used to display log entries.</string>
    <string name="format">Format</string>
    <string name="format_summary">Log format to use when displaying log entries.</string>
    <string name="buffer">Buffer</string>
    <string name="buffer_summary">Log buffer to display.</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_summary">Text size to use when displaying log entries.</string>
    <string name="background_color">Background Color</string>
    <string name="background_color_summary">Background color to use when displaying log entries.</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_summary">Prevent screen from turning off when application is running.</string>
    <string name="log_output">Log Output</string>
    <string name="html">HTML</string>
    <string name="html_summary">Share logs in HTML format?</string>

</resources>
