<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/log_display" >

        <ListPreference
            android:defaultValue="V"
            android:entries="@array/level_entries"
            android:entryValues="@array/level_values"
            android:key="level"
            android:summary="@string/level_summary"
            android:title="@string/level" />

        <ListPreference
            android:defaultValue="BRIEF"
            android:entries="@array/format_entries"
            android:entryValues="@array/format_values"
            android:key="format"
            android:summary="@string/format_summary"
            android:title="@string/format" />

        <ListPreference
            android:defaultValue="MAIN"
            android:entries="@array/buffer_entries"
            android:entryValues="@array/buffer_values"
            android:key="buffer"
            android:summary="@string/buffer_summary"
            android:title="@string/buffer" />

        <ListPreference
            android:defaultValue="MEDIUM"
            android:entries="@array/textsize_entries"
            android:entryValues="@array/textsize_values"
            android:key="textsize"
            android:summary="@string/text_size_summary"
            android:title="@string/text_size" />

        <ListPreference
            android:defaultValue="#ffffff"
            android:entries="@array/backgroundColor_entries"
            android:entryValues="@array/backgroundColor_values"
            android:key="backgroundColor"
            android:summary="@string/background_color_summary"
            android:title="@string/background_color" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keepScreenOn"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/log_output" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="shareHtml"
            android:summary="@string/html_summary"
            android:title="@string/html" />
    </PreferenceCategory>
</PreferenceScreen>